--- a/docs/latex/0main.tex
+++ b/docs/latex/0main.tex
@@ -123,16 +123,15 @@ Raspberry, ejecuta un PI y actúa sobre los motores.\\
 Como drivers para los motores se han usado tres circuitos integrados \textit{L293D} (dos puentes H por cada chip), que reciben como \textit{input}
 una señal generada por el micro mediante \textit{Pulse-Width Modulation}. En la sección de hardware de este mismo documento se detallan en más profundidad los sistemas
 electrónicos empleados, los buses de comunicaciones y se discute la estructura del robot.\\
-La odometría del robot se obtiene a partir de una estimación de la posición a partir de encoders ópticos, y de la velocidad y aceleración medidas por la IMU. La fusión
+La odometría del robot se obtiene a partir de una estimación de la posición a partir de encoders ópticos y de la velocidad y aceleración medidas por la IMU. La fusión
 sensorial se realiza con un filtro de Kalman extendido, implementado en el paquete \textit{robot localization} de ROS. El código desarollado para este proyecto y el uso de 
-software externo es expuesto en la seccion4.  \\
+software externo es expuesto en la sección tres de este mismo documento. El código se puede encontrar de forma íntegra en el repositorio \url{https://github.com/marrcogrova/SLAM_Wheel-E} con licencia libre.\\
 
 Todo el sistema, exceptuándo el control de bajo nivel del micro, corre en ROS Kinetic, en una configuración de multi-masters que relega los procesos computacionalmente costosos
 (algoritmos de SLAM y fusión sensorial) a un portátil conectado a la Raspberry a través de una red \textit{Wireless} dedicada.\\
-Para obtener información visual del entorno, se empleará un sensor RGB-D, es decir, la cámara \textit{Kinect v1 for Xbox 360}
 
-Por último, una breve explicación teórica del SLAM y se realizará una comparativa de dos técnicas de SLAM, en concreto \textit{RTAB-Map} y \textit{ORB-SLAM 2}. \\
-Además de ello se probará un software de optimización de mapas denominado \textit{Octomap}, el cual ayudará a obtener el mapa de ocupación 2D y 3D.
+Para obtener información visual del entorno, se emplea un sensor RGB-D, la cámara \textit{Kinect v1 for Xbox 360} de Microsoft.
+Más adelante, se expone en profundidad una breve explicación teórica de las metodologías SLAM y una comparativa de dos técnicas: \textit{RTAB-Map} y \textit{ORB-SLAM 2}. Adicionalmente, se prueba un software de optimización de mapas denominado \textit{Octomap}, el cual ayudará a obtener el mapa de ocupación 2D y 3D.
 
 \newpage
 \input{1hard.tex}
